--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   },
-  "homepage": "https://lenovikov.github.io/test-task"
+  "homepage": "https://lenovikov.github.io/react-test-cl-map"
 }
